Fix issue with Search Tag counts not showing

--- a/TroveTagTimeline/stylesheet.css
+++ b/TroveTagTimeline/stylesheet.css
@@ -36,7 +36,7 @@ table {
 input,
 div.groupHeader {
     float: left;
-    width: 250px;
+    width: 240px;
 }
 
 .headerInfo {
